--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"@mui/icons-material": "5.15.16",
 		"@mui/material": "5.15.15",
 		"@mui/material-nextjs": "5.15.11",
+		"@vercel/analytics": "1.2.2",
+		"@vercel/speed-insights": "1.0.10",
 		"next": "14.2.3",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
