Revert "build(tsconfig.base.json,tsconfig.src.json): include next-env.d.ts to src project"
This reverts commit 381829b51b4d8ee2eebf4e7be66065c5918b5bb2.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,5 +7,5 @@
 	"compilerOptions": {
 		"incremental": true
 	},
-	"exclude": ["node_modules", "app", "public", "next-env.d.ts"]
+	"exclude": ["node_modules", "app", "public"]
 }
