--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -49,19 +49,24 @@ jobs:
         env:
           HUSKY: 0
 
-      - name: Check Changed Files
-        id: changed-files
+      - name: Get Included Files of tsconfig.src.json
+        id: get-tsconfig-files
         # check if lint-staged should be run
         if: >-
           (github.event_name == 'push' && github.event.before != '0000000000000000000000000000000000000000') ||
           github.event_name == 'pull_request'
+        run: |
+          files=$(bun run tsc --project tsconfig.src.json --showConfig | jq --raw-output ".files | join(\",\")")
+          echo "files=$files" >> "$GITHUB_OUTPUT"
+
+      - name: Check Changed Files
+        id: changed-files
+        # outputs will be empty strings if the step is skipped
+        if: steps.get-tsconfig-files.outputs.files != ''
         uses: tj-actions/changed-files@a29e8b565651ce417abb5db7164b4a2ad8b6155c # v44.4.0
         with:
-          files: |
-            src/**
-            public/**
-            next.config.js
-            tsconfig.src.json
+          files: ${{ steps.get-tsconfig-files.outputs.files }}
+          files_separator: ","
 
       - name: Restore Build Cache
         id: restore-build-cache
