--- a/tsconfig.src.json
+++ b/tsconfig.src.json
@@ -4,5 +4,5 @@
 		"@tsconfig/next/tsconfig.json",
 		"@tsconfig/strictest/tsconfig.json"
 	],
-	"include": ["src", "public", ".next/types/**/*.ts"]
+	"include": ["src", "public", ".next/types/**/*.ts", "next-env.d.ts"]
 }
