--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -44,7 +44,6 @@ jobs:
           node-version-file: package.json
 
       - name: Install Dependencies
-        id: install
         run: bun install --frozen-lockfile
         env:
           HUSKY: 0
@@ -78,6 +77,11 @@ jobs:
           # restore the prior cache if lockfile is not changed
           restore-keys: nextjs-${{ runner.os }}-${{ hashFiles('**/bun.lockb') }}-
 
+      - name: Do Nothing
+        # step to check all above steps are successful
+        id: do-nothing
+        run: ":"
+
       - name: "commitlint (push: initial commit)"
         id: commitlint-push-initial
         # commit hash will be 000... if it doesn't exist
@@ -110,37 +114,27 @@ jobs:
         # commit hash will be 000... if it doesn't exist
         if: >-
           ${{
-            !cancelled() && steps.install.outcome == 'success' &&
+            !cancelled() && steps.do-nothing.outcome == 'success' &&
             github.event_name == 'push' && github.event.before != '0000000000000000000000000000000000000000'
           }}
         run: bun run lint-staged --diff=origin/${{ github.ref_name }}^...origin/${{ github.ref_name }}
 
       - name: Check (pull_request)
         id: check-pr
-        if: ${{ !cancelled() && steps.install.outcome == 'success' && github.event_name == 'pull_request' }}
+        if: ${{ !cancelled() && steps.do-nothing.outcome == 'success' && github.event_name == 'pull_request' }}
         env:
           # use an intermediate variable to avoid injection attacks
           # ref: https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#good-practices-for-mitigating-script-injection-attacks
           HEAD_REF: ${{ github.head_ref }}
         run: bun run lint-staged --diff=origin/${{ github.base_ref }}...origin/"$HEAD_REF"
 
-      - name: ignore-sync
-        id: ignore-sync
-        if: >-
-          ${{
-            !cancelled() && steps.install.outcome == 'success' &&
-            steps.check-push.outcome == 'skipped' && steps.check-pr.outcome == 'skipped'
-          }}
-        # run ignore-sync to check if the ignore files are up to date
-        run: bun run ignore-sync
-
-      - name: Biome
-        if: ${{ !cancelled() && steps.ignore-sync.outcome == 'success' && steps.ignore-sync.outcome == 'failure' }}
-        run: bun run biome ci --error-on-warnings .
-
       - name: Build
         id: build
-        if: ${{ !cancelled() && steps.ignore-sync.outcome == 'success' && steps.ignore-sync.outcome == 'failure' }}
+        if: >-
+          ${{
+            !cancelled() && steps.do-nothing.outcome == 'success' &&
+            steps.check-push.outcome == 'skipped' && steps.check-pr.outcome == 'skipped'
+          }}
         # generate type definitions (e.g. next-env.d.ts)
         run: bun run next build
 
@@ -156,24 +150,33 @@ jobs:
           path: .next/cache
           key: ${{ steps.restore-build-cache.outputs.cache-primary-key }}
 
+      - name: ignore-sync
+        if: ${{ !cancelled() && steps.build.outcome == 'success' }}
+        # run ignore-sync to check if the ignore files are up to date
+        run: bun run ignore-sync
+
+      - name: Biome
+        if: ${{ !cancelled() && steps.build.outcome == 'success' }}
+        run: bun run biome ci --error-on-warnings .
+
       - name: tsc (source)
         if: ${{ !cancelled() && steps.build.outcome == 'success' }}
         run: bun run tsc --project tsconfig.src.json --incremental false
 
       - name: tsc (other)
-        if: ${{ !cancelled() && steps.ignore-sync.outcome == 'success' && steps.ignore-sync.outcome == 'failure' }}
+        if: ${{ !cancelled() && steps.build.outcome == 'success' }}
         run: bun run tsc --project tsconfig.base.json --incremental false
 
       - name: cspell
-        if: ${{ !cancelled() && steps.ignore-sync.outcome == 'success' && steps.ignore-sync.outcome == 'failure' }}
+        if: ${{ !cancelled() && steps.build.outcome == 'success' }}
         run: bun run cspell "**/*"
 
       - name: knip
-        if: ${{ !cancelled() && steps.ignore-sync.outcome == 'success' && steps.ignore-sync.outcome == 'failure' }}
+        if: ${{ !cancelled() && steps.build.outcome == 'success' }}
         run: bun run knip
 
       - name: Check No Files are Changes
-        if: ${{ !cancelled() && steps.install.outcome == 'success' }}
+        if: ${{ !cancelled() && steps.do-nothing.outcome == 'success' }}
         run: |
           git add .
           git diff --staged --exit-code
