chore(package.json): use bun: prefix for concurrently in scripts

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
 		"build": "next build",
 		"start": "next start",
 		"commit": "git-cz",
-		"check": "concurrently \"npm:check:*(!tsc:)\"",
+		"check": "concurrently \"bun:check:*(!tsc:)\"",
 		"check:biome": "biome check --apply --error-on-warnings .",
 		"check:prettier": "prettier --write --cache .",
-		"check:tsc": "concurrently npm:check:tsc:*",
+		"check:tsc": "concurrently \"bun:check:tsc:*\"",
 		"check:tsc:base": "tsc --project tsconfig.base.json",
 		"check:tsc:src": "tsc --project tsconfig.src.json",
 		"check:cspell": "cspell --cache \"**/*\"",
