Revert "ci(tsconfig.src.json): change for test"
This reverts commit 2933cc6ae246e570c97c4a89279ba7e1e40c4b0e.

--- a/tsconfig.src.json
+++ b/tsconfig.src.json
@@ -4,11 +4,5 @@
 		"@tsconfig/next/tsconfig.json",
 		"@tsconfig/strictest/tsconfig.json"
 	],
-	"include": [
-		"src",
-		"public",
-		".next/types/**/*.ts",
-		"next-env.d.ts",
-		"__test__"
-	]
+	"include": ["src", "public", ".next/types/**/*.ts", "next-env.d.ts"]
 }
