--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
 		"prettier": "3.2.5",
 		"typescript": "5.4.5"
 	},
-	"trustedDependencies": ["@biomejs/biome"],
+	"trustedDependencies": ["@biomejs/biome", "@vercel/speed-insights"],
 	"volta": {
 		"node": "21.7.3"
 	}
