--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"@vercel/speed-insights": "1.0.10",
 		"next": "14.2.3",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"sharp": "0.33.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.7.3",
@@ -56,7 +57,7 @@
 		"prettier": "3.2.5",
 		"typescript": "5.4.5"
 	},
-	"trustedDependencies": ["@biomejs/biome", "@vercel/speed-insights"],
+	"trustedDependencies": ["@biomejs/biome", "@vercel/speed-insights", "sharp"],
 	"volta": {
 		"node": "21.7.3"
 	}
