chore: follow biome

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -157,7 +157,7 @@ jobs:
 
       - name: Biome
         if: ${{ !cancelled() && steps.build.outcome == 'success' }}
-        run: bun run biome ci --error-on-warnings .
+        run: bun run biome ci --error-on-warnings
 
       - name: tsc (source)
         if: ${{ !cancelled() && steps.build.outcome == 'success' }}
