--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start": "next start",
 		"commit": "git-cz",
 		"check": "concurrently \"bun:check:*(!tsc:)\"",
-		"check:biome": "biome check --apply --error-on-warnings .",
+		"check:biome": "biome check --fix --error-on-warnings",
 		"check:prettier": "prettier --write --cache .",
 		"check:tsc": "concurrently \"bun:check:tsc:*\"",
 		"check:tsc:base": "tsc --project tsconfig.base.json",
