--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,7 @@ defaults:
 jobs:
   check:
     runs-on: ubuntu-24.04
+    timeout-minutes: 15
 
     permissions:
       contents: read # for checkout
