--- a/.github/workflows/lint-gha.yml
+++ b/.github/workflows/lint-gha.yml
@@ -19,6 +19,7 @@ defaults:
 jobs:
   lint:
     runs-on: ubuntu-24.04
+    timeout-minutes: 15
 
     permissions:
       contents: read # for checkout
